# coding-challenges

./: .gitignore  README.md  pyproject.toml
algoexpert/: __init__.py  max-subset-sum-no-adjacent.py
algoexpert/easy/: binary_search.py  breadth-first-search.py  bubble-sort.py  bubble_sort.py  caesar_cipher_encryptor.py  depth-first-search.py  depth_first_search.py  find-three-largest-numbers.py  find_closest_value_in_bst.py  first_non_repeating_character.py  generate_document.py  minimum-waiting-time.py  nth-fibonacci.py  palindrome_check.py  product-sum.py  product_sum.py  remove-duplicates-from-linked-list.py  remove_duplicates_from_linked_list.py  run-length-encoding.py  run_length_encoding.py  sorted-squared-array.py  sorted_squared_array.py  tournament_winner.py  two_number_sum.py  validate_subsequence.py
algoexpert/hard/: longest-substring-without-duplication.py  longest_substring_without_duplication.py  reverse-linked-list.py  reverse_linked_list.py
algoexpert/medium/: array-of-products.py  breadth_first_search.py  first-duplicate-value.py  first_duplicate_value.py  group-anagrams.py  linked-list-construction.py  longest-palindromic-substring.py  longest_palindromic_substring.py  monotonic_array.py  remove_kth_node_from_end.py  single_cycle_check.py  smallest-difference.py  three-number-sum.py  three_number_sum.py  youngest_common_ancestor.py
google-foobar/: 1_solar_doomsday.py  2a-hey-i-already-did-that.py  2b_gearing_up_for_destruction.py  3a_bomb_baby.py  3b_doomsday_fuel.py  3c_the_grandest_staircase_of_them_all.py
leetcode/python/: __init__.py
(+218 files in other folders)
