[tool.poetry]
name = "mcleonte.dsa"
version = "0.1.0"
authors = [
  "Mihail Costin Leonte <mail@mcleonte.com>"
]
readme = "README.md"
description = "Data Structures and Algorithms personal collection"
repository = "https://github.com/mcleonte/mcleonte.dsa"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
sqlfluff = "^1.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
